footer css and comments

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
         </div>
       </div>
 
+      <!-- Footer -->
       <div class="hero-foot" id="footer">
         <div class="container has-text-centered">
           <p>By <a href="https://younglee.io" target="_blank">a nerd</a></p>
